Adding some description

--- a/ebextensions/postdeploy.config
+++ b/ebextensions/postdeploy.config
@@ -1,6 +1,7 @@
---- 
-files: 
-  /opt/elasticbeanstalk/hooks/appdeploy/post/99_start_nginx.sh: 
+# Description: post deploy script for nginx for php based application in beanstalk. Beanstalk does not provide nginx support with nginx by default.
+---
+files:
+  /opt/elasticbeanstalk/hooks/appdeploy/post/99_start_nginx.sh:
     content: |
         #!/usr/bin/env bash
         . /opt/elasticbeanstalk/support/envvars
